# BBBot

./: .breakpoints  LICENSE  README.md  main.py  pyproject.toml
src/: fib.py  game.py  parser.py  phi.py
